--- a/RestAssured/test-output/old/Default suite/classes.html
+++ b/RestAssured/test-output/old/Default suite/classes.html
@@ -4,34 +4,46 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>RestAssuredProject.CalendarAPITest</td>
+<td>RestAssuredProject.GmailAPITest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>createAnEventTest</td>
+<td>listUserDraftMessage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>getCalendarEventListTest</td>
+<td>deleteMessageFromGmail</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>getCalendarListTest</td>
+<td>getCurrentUserProfile</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>getCalendarColorsTest</td>
+<td>createDraftinGmail</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>getCalendarTest</td>
+<td>sendEmailfromGmail</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>listUserCalendarSettingsTest</td>
+<td>deleteDraftMessage</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>listUserMessages</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>getUserMessages</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>getDraftMessage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
